--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.6.1",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "ini": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
@@ -18,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "concurrently": "^7.1.0",
     "electron": "^18.1.0",
+    "electron-devtools-installer": "^3.2.0",
     "react-scripts": "latest",
     "typescript": "^4.6.3",
     "wait-on": "^6.0.1"
